--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,12 @@
 version: "3"
 
 services:
-  webapp:
+  nginx:
+    build:
+      context: ./nginx/
+    ports:
+      - "127.0.0.1:18080:80"
+
+  quotes-webapp:
     build:
       context: .
-    ports:
-      - "127.0.0.1:18080:8080"
